# construct-classes

./: .gitignore  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml
src/construct_classes/: __init__.py
tests/: test_construct_classes.py
